RESOLVED FIXED76908
Web Inspector: inspector/debugger/dom-breakpoints.html is failing after r105642
https://bugs.webkit.org/show_bug.cgi?id=76908
Summary Web Inspector: inspector/debugger/dom-breakpoints.html is failing after r105642
Ilya Tikhonovsky
Reported 2012-01-24 06:06:10 PST
%subj%
Attachments
Patch (1.88 KB, patch)
2012-01-24 06:09 PST, Ilya Tikhonovsky
yurys: review+
Ilya Tikhonovsky
Comment 1 2012-01-24 06:09:58 PST
Ilya Tikhonovsky
Comment 2 2012-01-24 06:35:59 PST
Note You need to log in before you can comment on or make changes to this bug.