Web Inspector: inspector/debugger/dom-breakpoints.html started to fail after r105642 https://bugs.webkit.org/show_bug.cgi?id=76908

Reviewed by Yury Semikhatsky.

* css/CSSMutableStyleDeclaration.cpp:

Canonical link: https://commits.webkit.org/93767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105735 268f45cc-cd09-0410-ab3c-d52691b4dbfc